Mostly documentation changes diamond-aps/doc/sphinx