@@ -1,27 +1,28 @@
 package org.javautil.commandline;
 
 import static org.junit.Assert.assertEquals;
-import jcmdline.CmdLineException;
 
 import org.javautil.commandline.annotations.IntegerArguments;
 import org.junit.Test;
+
+import jcmdline.CmdLineException;
 
 public class ReadFromPropertiesFile extends BaseTest {
 	// TODO make this work
 
 	@Test
-	public void testEquals() throws CmdLineException {
+	public void testEquals() {
 		final IntegerArguments argumentBean = new IntegerArguments();
-		final CommandLineHandlerDelete clh = new CommandLineHandlerDelete(argumentBean);
+		final CommandLineHandler clh = new CommandLineHandler(argumentBean);
 		clh.evaluateArgumentsString("--from-properties=src/test/resources/org/javautil/commandline/ReadFromPropertiesFile.properties");
-		assertEquals(new Integer(1), argumentBean.getIntValue());
+		assertEquals(Integer.valueOf(1), argumentBean.getIntValue());
 	}
 
 	@Test
-	public void test2() throws CmdLineException {
+	public void test2() {
 		final IntegerArguments argumentBean = new IntegerArguments();
-		final CommandLineHandlerDelete clh = new CommandLineHandlerDelete(argumentBean);
+		final CommandLineHandler clh = new CommandLineHandler(argumentBean);
 		clh.evaluateArgumentsString("--from-properties src/test/resources/org/javautil/commandline/ReadFromPropertiesFile.properties");
-		assertEquals(new Integer(1), argumentBean.getIntValue());
+		assertEquals(Integer.valueOf(1), argumentBean.getIntValue());
 	}
 }
